<?xml version="1.0" encoding="utf-8"?>
<!-- THIS IS WHERE EVERYTHING GETS PUT INTO THE NAV BAR -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- HOME BUTTON -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.monumentmapper.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- GALLERY BUTTON -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.monumentmapper.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <!-- SLIDESHOW BUTTON -->
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.monumentmapper.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <!-- ACCOUNT BUTTON -->
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.monumentmapper.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

</navigation>