<?xml version="1.0" encoding="UTF-8"?>
<!--
    Edited the bonuspack bubble to look nicer.
    Idea from: https://mobiledevstories.wordpress.com/2014/03/01/osmdroid-bonus-pack-markers-with-clickable-infowindows/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bonuspack_bubble">

        <!-- Image -->
        <ImageView android:id="@+id/bubble_image"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:contentDescription="@string/monument_image_default_desc" />


        <!-- Text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView android:id="@+id/bubble_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:maxEms="17"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="Title" />
                <Button android:id="@+id/bubble_moreinfo"
                    android:background="@drawable/btn_moreinfo"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="0" />
            </LinearLayout>
            <TextView android:id="@+id/bubble_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="14sp"
                android:maxEms="17"
                android:text="Description" />
            <TextView android:id="@+id/bubble_subdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="14sp"
                android:maxEms="17"
                android:text="Address"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <!-- Button for taking a photo -->
            <Button
                android:id="@+id/bubble_camera_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/camera_icon"
                android:contentDescription="@string/info_window_camera_button_desc"
                android:visibility="gone"
                />

            <!-- Button for adding stop -->
            <Button
                android:id="@+id/bubble_add_stop_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/stop_add"
                android:contentDescription="@string/info_window_add_stop_button_desc"
                />

            <!-- Button for removing stop -->
            <Button
                android:id="@+id/bubble_remove_stop_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/stop_remove"
                android:contentDescription="@string/info_window_remove_stop_button_desc"
                android:visibility="gone"
                />

        </LinearLayout>

</LinearLayout>